bee-message/bee-byte-cost-derive/tests/fail/missing_attr_weight.stderr
error: field attribute requires one or more weight specifiers such as `#[byte_cost(key)]` or `#[byte_cost(key,data)]`
  --> tests/fail/missing_attr_weight.rs:10:7
   |
10 |     #[byte_cost]
   |       ^^^^^^^^^
